# vaccelrt

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.in  README.md  arg_doc.md  meson.build  meson.options  project.yml  vaccel-config.cmake.in
.github/workflows/: coverage_upload.yml  pull_request.yml  utils.yml
cmake/: CMakeCargo.cmake  CMakeDetermineRustCompiler.cmake  FindRust.cmake  SetGitVersion.cmake
docs/coverage/: faq.md  mocking_functions.md  running_tests.md
examples/: CMakeLists.txt  classification.c  classify.c  classify_generic.c  depth.c  depth_generic.c  detect.c  detect_generic.c  exec.c  exec_generic.c  exec_with_res.c  local_and_virtio.c  meson.build  mytestlib.c  noop.c  pose.c  pose_generic.c  segment.c  segment_generic.c  tf_inference.c  tf_model.c  tf_saved_model.c  torch_inference.cpp
examples/models/tf/lstm2/: keras_metadata.pb
fpga/: CMakeLists.txt
old_unit_testing/test_cmocka/: RUN_TESTS  simple_test.c
old_unit_testing/test_unity/: exec_all_tests.sh  test_noop.c  test_plugins.c  test_session.c
plugins/: CMakeLists.txt  meson.build
plugins/exec/: CMakeLists.txt  vaccel.c
plugins/fpga/: vaccel.c
plugins/helloworld/: CMakeLists.txt  vaccel.c
plugins/jetson_inference/: operations.cpp
plugins/mbench/: vaccel.c
plugins/noop/: CMakeLists.txt  vaccel.c
plugins/ocl/: CMakeLists.txt  vaccel.cpp
plugins/tensorflow/: operations.cpp
python/: CMakeLists.txt  meson.build
scripts/: dist.sh  generate-version.sh
src/: CMakeLists.txt  backend.c  error.h  id_pool.c  id_pool.h  list.h  log.c  log.h  meson.build  plugin.c  plugin.h  resources.c  resources.h  session.c  session.h  utils.c  utils.h  vaccel.c  vaccel.h  vaccel_ops.c  vaccel_ops.h
src/api/: ml.h
src/include/: error.h  list.h  log.h  meson.build  plugin.h  resources.h  session.h  tf_model.h  vaccel.h  vaccel.h.in  vaccel_file.h  vaccel_id.h  vaccel_prof.h
src/include/ops/: blas.h  exec.h  genop.h  image.h  noop.h  tf.h  torch.h  vaccel_ops.h
src/include/resources/: shared_object.h  single_model.h  tf_saved_model.h
src/ops/: blas.c  blas.h  exec.c  exec.h  genop.c  genop.h  image.c  image.h  noop.c  noop.h  tf.c  tf.h  tflite.c  torch.c  vaccel_ops.h
src/profiling/: vaccel_prof.c  vaccel_prof.h
src/resources/: file.c  file.h  shared_object.c  single_model.c  tf_model.c  tf_model.h  tf_saved_model.c  tf_saved_model.h
test/: CMakeLists.txt  meson.build  test_exec_helpers.cpp  test_fpga.c  test_fpga_copy.c  test_fpga_vadd.c  test_noop.c
test/plugins_fpga/: test_fpga_copy.c
test/unit/: test_bootstrap_shutdown.cpp  test_misc.cpp  test_plugin.cpp  test_vaccel.cpp
test_cmocka/: exec_all_tests.sh
test_unity/: exec_all_tests.sh  test_plugins.c
test_valgrind/: run_scripts.sh
test_valgrind/valgrind_output/: valgrind_output_test_a.out.txt  valgrind_output_test_fpga_copy.out.txt  valgrind_output_test_fpga_vadd.out.txt  valgrind_output_test_noop.out.txt  valgrind_output_test_plugin.out.txt  valgrind_output_test_session.out.txt
unit_test/: README.md  test_exec.c  test_noop.c  test_plugins.c  test_session.c
