option('plugin-noop',
  type : 'feature',
  value : 'disabled',
  description : 'Build the no-op debugging plugin')

option('plugin-exec',
  type : 'feature',
  value : 'disabled',
  description : 'Build the exec plugin')

option('examples',
  type : 'feature',
  value : 'disabled',
  description : 'Build the examples')

option('tests',
  type : 'feature',
  value : 'disabled',
  description : 'Enable testing')
